--- a/css/style.css
+++ b/css/style.css
@@ -4,20 +4,14 @@
    
 }
 h1{
-  margin: 70px 34px;
-  text-align: center;
-  font-size: 63px;
-  font-weight: bolder;
+  margin-top: 34px;
+  margin-bottom: -60px;
 }
-/* .crd{
-  width: 190%;
-  margin-left: -590px;
-    border: 4px solid black;
-    background-color: rgb(205, 192, 175);
-    font-size: 33px;
-} */
 
-
+.fon{
+  text-align: center;
+  margin-left: 47%;
+}
 }
 
 
@@ -30,15 +24,12 @@ h1{
   display: block;
     }
     h1{
-      text-align: center;
-      margin: 80px;
-      font-weight: bold;
+      margin-bottom: -60px;
+      margin-top: 57px;
     }
-    /* .crd{
-      width: 80%;
-      margin-left: 2px;
-        border: 4px solid black;
-        background-color: rgb(205, 192, 175);
-        font-size: 33px;
-    } */
+
+    .fon{
+      text-align: center;
+      margin-left: 41%;
+    }
     }
